test/semantic/Sentencias/fail06.gluck
start:function {
	x:int;
	y:int = x; // error: x no inicializada
}
